src/objects/Support_Ticket_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>These settings allow configuration of automated steps on support tickets - drives the landing page and ticket record types for any new implementations or edits to existing product families.</description>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>Match this field to the contract type the ticket is created from</description>
        <label>Contract Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landing_Page__c</fullName>
        <description>Use this setting to determine the landing page for the for the record type</description>
        <label>Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>Match this field to the record type you desire for the contract type</description>
        <label>Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Support Ticket Settings</label>
</CustomObject>